# lidar_with_mirror

./: lidar_with_mirror_pkgs.install
lidar_with_mirror_bringup/: CMakeLists.txt  package.xml
lidar_with_mirror_bringup/config/: joy.yaml  ypspur_ros.yaml
lidar_with_mirror_bringup/config/ypspur/: box_v3.param
lidar_with_mirror_bringup/launch/: lidar_with_mirror.launch
lidar_with_mirror_bringup/launch/includes/: cost_cloud_postprocessor.launch  description.launch.xml  rfans16.launch  teleop_joy.launch  urg_lidar.launch
lidar_with_mirror_bringup/src/: projected_transform_publisher_node.cpp
lidar_with_mirror_control/config/: orne_box_control.yaml
lidar_with_mirror_control/launch/: lidar_with_mirror_control.launch
lidar_with_mirror_simulation/: CMakeLists.txt  package.xml
lidar_with_mirror_simulation/launch/: lidar_with_mirror_sim.launch
