<?xml version="1.0"?>
<package format="2">
  <name>lidar_with_mirror_bringup</name>
  <version>0.1.0</version>
  <description>The lidar_with_mirror_bringup package</description>
  <maintainer email="babaryusei.kw@gmail.com">Ryusei Baba</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>param_io</build_depend>
  <build_depend>Eigen3</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>param_io</exec_depend>
  <exec_depend>Eigen3</exec_depend> 
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
</package>